Clarify how to run "ktlint --format" on Java16+ with maven-antrun-plugin
Closes #1822