@@ -21,7 +21,11 @@ See [cli usage](../cli) for arguments that can be supplied to `ktlint`.
             <target name="ktlint">
                 <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                     classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
-                    <arg value="src/**/*.kt"/>
+                  <!-- Note: the JVM args below are only required when running ktlint with Java 16+ in format mode.
+                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                  <jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+                  -->
+                  <arg value="src/**/*.kt"/>
                     <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
                 </java>
             </target>
@@ -36,6 +40,9 @@ See [cli usage](../cli) for arguments that can be supplied to `ktlint`.
             <target name="ktlint">
                 <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                     classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+                    <!-- Note: the JVM args below are only required when running ktlint with Java 16+ in format mode -->
+                    <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                    <jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
                     <arg value="-F"/>
                     <arg value="src/**/*.kt"/>
                     <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
